# smart-event-agent

./: .env  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  EVENT_MARKETING_KIT.md  GCP_QUICK_REFERENCE.md  GCP_QUICK_START.md
.github/workflows/: deploy-gcp.yml
backend/: .dockerignore  .env.example  .gcloudignore  Dockerfile  agent.py  app.yaml  cloudbuild.yaml  k8s-deployment.yaml  main.py  pyproject.toml  skills.md  tools.py  utils.py
backend/agents/: communication_agent.py  logistics_agent.py  research_agent.py  router_agent.py
backend/api/: routes.py
backend/models/: schemas.py
backend/services/: firestore_service.py  gmail_service.py  maps_service.py  pubsub_service.py
frontend/: .dockerignore  Dockerfile
frontend/app/: page.tsx
frontend/app/api/: _proxy.ts
frontend/app/api/events/[event_id]/: route.ts
frontend/app/api/events/[event_id]/plan/: route.ts
frontend/app/api/events/create/: route.ts
frontend/app/api/workflow/[event_id]/stream/: route.ts
frontend/app/create/: page.tsx
frontend/app/result/[event_id]/: page.tsx
frontend/app/workflow/[event_id]/: page.tsx
frontend/components/: AgentCard.tsx  LiveFeed.tsx  WorkflowTimeline.tsx
scripts/: deploy-to-gcp.bat  deploy-to-gcp.sh  preflight-check.sh
